syntax = "proto3";

option csharp_namespace = "MyNihongo.WebApi.Infrastructure.Kanji";

package kanji;
import "core/kanji_enums.proto";
import "core/system_enums.proto";
import "core/optional_types.proto";

message KanjiReading {
	.kanji.KanjiReadingType readingType = 1;
	string mainText = 2;
	string secondaryText = 3;
	string romajiText = 4;
}

// GetList
message KanjiGetListRequest {
	.system.JlptLevel jlptLevel = 1;
	Filter filter = 2;
	.system.Language language = 3;
	string searchText = 4;
	int32 pageIndex = 5;
	int32 pageSize = 6;

	enum Filter {
		NONE = 0;
		USER_DATA = 1;
		FAVOURITES = 2;
	}
}

message KanjiGetListResponse {
	int32 kanjiId = 1;
	int32 sortingOrder = 2;
	string character = 3;
	.system.JlptLevel jlptLevel = 4;
	UserData userData = 5;
	repeated KanjiReading readings = 6;
	repeated string meanings = 7;

	message UserData {
		double favouriteRating = 1;
	}
}

// GetDetail
message KanjiGetDetailRequest {
	int32 kanjiId = 1;
	.system.Language language = 2;
}

message KanjiGetDetailResponse {
	string character = 1;
	.system.JlptLevel jlptLevel = 2;
	UserData userData = 3;
	repeated KanjiReading readings = 4;
	repeated string meanings = 5;

	message UserData {
		double favouriteRating = 1;
		int32 mark = 2;
		string notes = 3;
	}
}

// UserAdd
message KanjiUserAddRequest {
	int32 kanjiId = 1;
}

message KanjiUserAddResponse {
	double favouriteRating = 1;
	string notes = 2;
	int32 mark = 3;
}

// UserRemove
message KanjiUserRemoveRequest {
	int32 kanjiId = 1;
}

message KanjiUserRemoveResponse {
}

// UserSet
message KanjiUserSetRequest {
	int32 kanjiId = 1;
	.system.DoubleOptional favouriteRating = 2;
	.system.StringOptional notes = 3;
	.system.Int32Optional mark = 4;
}

message KanjiUserSetResponse {
}
